Fixed playlist name wrap and inability to scroll on mobile

--- a/client/main.less
+++ b/client/main.less
@@ -724,6 +724,7 @@ html.nontouch .playlists-container li:hover .selectArrow, .playlists-container l
 	text-decoration: none;
 	color: #ccc;
 	.rounded;
+	word-wrap: break-word;
 }
 
 .actionBar{
